ui: fixed some spacing in creator page component

--- a/liftlogger-client/src/app/components/creator-page/creator-page.component.sass
+++ b/liftlogger-client/src/app/components/creator-page/creator-page.component.sass
@@ -1,4 +1,4 @@
-@use '/src/styles'
+@use '../../../styles'
 
 :host
   @include styles.flex(column)
@@ -7,14 +7,14 @@
   .content
     @include styles.flex(column)
     flex-grow: 1
-    gap: 1em
+    gap: 2em
     padding: 2em
 
     .header
       @include styles.flex(column)
       gap: 1em
 
-    .groups-selector
+    .page-content
       flex-grow: 1
 
     .footer
@@ -23,3 +23,23 @@
 
       .action
         flex-grow: 1
+
+    @include styles.isLarge
+      width: 80vw
+      align-self: center
+      display: grid
+      grid-template-columns: 1fr 1fr
+      grid-template-rows: 1fr 0fr
+      grid-template-areas: "header content" "footer footer"
+
+      @include styles.isXL
+        width: 60vw
+
+      .header:
+        grid-area: header
+
+      .page-content
+        grid-area: content
+
+      .footer
+        grid-area: footer
